--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,7 +25,7 @@ jobs:
         cd ${{ secrets.REPOSITORY_NAME }}
     - name: Set Version
       run: |
-        ls
+        cd ${{ secrets.REPOSITORY_NAME }}
         uvm build setup "./ProjectSettings/ProjectSettings.asset"
     - name: Commit Changes
       run: |
