--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,22 +12,32 @@ jobs:
       with:
         python-version: 3.8
     - name: Setup Git
+      env:
+        GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
+        GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
       run: |
-        git config --global user.name '${{ secrets.GIT_USER_NAME }}'
-        git config --global user.email '${{ secrets.GIT_USER_EMAIL }}'
+        git config --global user.name "$GIT_USER_NAME"
+        git config --global user.email "$GIT_USER_EMAIL"
     - name: Upgrade Pip
       run: pip install --upgrade pip
     - name: Install Unity Version Manager
       run: pip install uvm
     - name: Clone Repository
-      run: git clone ${{ secrets.REPOSITORY_URL }}
+      env:
+        REPOSITORY_URL: ${{ secrets.REPOSITORY_URL }}
+      run: git clone "$REPOSITORY_URL"
     - name: Set Version
+      env:
+        REPOSITORY_NAME: ${{ secrets.REPOSITORY_NAME }}
       run: |
-        cd ${{ secrets.REPOSITORY_NAME }}
+        cd "$REPOSITORY_NAME"
         uvm build setup "./ProjectSettings/ProjectSettings.asset"
     - name: Commit Changes
+      env:
+        REPOSITORY_NAME: ${{ secrets.REPOSITORY_NAME }}
       run: |
-        cd ${{ secrets.REPOSITORY_NAME }}
+        cd "$REPOSITORY_NAME"
+        git checkout main
         git add "./ProjectSettings/ProjectSettings.asset"
         git commit --allow-empty -m "Set Version"
-        git push
+        git push origin main
